JS to wrap elements together, page padding and quantity color fixes

--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -4,6 +4,12 @@
 [data-engrid-theme="fww"] {
   --engrid__page_background-color: #ffffff;
   --error__color: #f24235;
+  
+  @media screen and (max-width: 600px) {
+    --engrid__body-main_padding: 0 1.6em;
+    --engrid__body-top_padding: 0 1.6em;
+    --engrid__body-title_padding: 0 1.6em;
+  }
 
   // TYPOGRAPHY DEFAULT
   --default_font-family: "Graphik", "Arial", "sans-serif";
@@ -572,9 +578,9 @@ h3 {
   .en__ticket.en__ticket--ENBL,
   .en__component.en__component--eventtickets.rounded-borders,
   .en__registrants,
-  .en__component.en__component--formblock.hide-fields,
-  .en__component.en__component--formblock.giveBySelect-Card,
-  .en__field__element.en__field__element--radio {
+  .border-container {
+  // .en__component.en__component--formblock.giveBySelect-Card,
+  // .en__field__element.en__field__element--radio {
     border: 2px solid #000000;
     border-radius: 15px;
     padding: 20px;
@@ -623,6 +629,7 @@ h3 {
   .en__ticket__quantity {
     font-size: 1.25em;
     width: 2em;
+    color: #000;
   }
 
   .en__additional {
@@ -717,12 +724,22 @@ h3 {
   }
 
   .en__orderSummary__data.en__orderSummary__data--cost,
-  .en__orderSummary__data.en__orderSummary__data--totalAmount {
+  .en__orderSummary__data.en__orderSummary__data--totalAmount,
+  .en__orderSummary__header.en__orderSummary__header--cost {
     text-align: left;
-    padding-left: 20px;
+    padding-left: 0;
+
+    @media screen and (min-width: 601px) {
+      padding-left: 20px;
+    }
   }
 
-  // Billing into margin fix
+  // Remove left padding from checkbox
+  .en__field--general-mobile-opt-in {
+    padding-left: 0;
+  }
+
+  // Billing info margin fix
   .en__component--formblock,
   .en__component--svblock,
   .en__registrants__registrantDetails {
